# claude-pyspark-proj

./: .gitignore  CLAUDE.md  DAB_QUICK_START.md  DAB_SETUP.md  databricks.yml  fetch_sample_data.py  main.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/code-reviewer/evals/: evals.json
.claude/skills/fetchApi/: fetch_data.py  template.md
.claude/skills/fetchApi/examples/: sample.md
.claude/skills/fetchApi/scripts/: validate.sh
.claude/skills/lint/: SKILL.md  lint.sh
.claude/skills/pyspark-test-generator/: SKILL.md
.claude/skills/pyspark-test-generator/evals/: evals.json
.github/workflows/: deploy-and-run.yml  deploy.yml
project_architecture/: ARCHITECTURE_QUICK_REFERENCE.md  DATA_PLATFORM_ARCHITECTURE.md  hld_diagram.md  lld_diagram.md
resources/: clusters.yml  databricks_jobs.yml  jobs.yml
scripts/: install-wheel.sh
src/claude_pyspark_proj/: __init__.py  batch_job_example.py  cli_autoloader.py  cli_event_hub.py  test_spark_simple.py
src/claude_pyspark_proj/autoloader/: README.md  __init__.py  cloud_file_ingester.py  example_usage.py
src/claude_pyspark_proj/streaming/: __init__.py  get_data_from_event_hubs.py
src/jobs/: autoloader_job.py  autoloader_wrapper.py  event_hub_streaming.py  event_hub_wrapper.py
tests/: test_autoloader.py  test_pipeline_logic.py  test_streaming_pipeline.py  test_streaming_simple.py
