[project]
name = "claude-pyspark-proj"
version = "0.1.0"
description = "PySpark streaming pipeline with Azure Event Hubs integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.4.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
